Fri Sep 15 18:14:37 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Allow users to set the parameters used in the BM25 and traditional
	  weighting schemes.  Documented, but not tested.

Fri Sep 15 15:02:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved todo.xml to docs/

	* TODO is now generated from a rule in the root directory

	* TODO and docs/todo.html not generated if XML::Parser isn't
	  installed.

Fri Sep 15 13:26:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an AC_MSG_WARN if validation is not supported

Fri Sep 15 12:59:17 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Hopefully fixed problems with older libxml not supporting
	  validation.

Fri Sep 15 12:01:34 BST 2000 Olly Betts

	* TODO and todo.html now generated from master todo.xml.

Fri Sep 15 09:07:04 BST 2000 Olly Betts

	* HTML TODO list coloured by priority.

Thu Sep 14 19:46:44 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add some tests for QuartzDbEntries object.  Need more.

	* Changed QuartzDbTable so that its methods merely Assert that keys
	  have non-zero length, rather than throwing exceptions.  This
	  condition should never arise.

Thu Sep 14 18:38:46 BST 2000 Olly Betts

	* Overhauled DEBUGCALL macros - now you can just use RETURN(...)
	  instead of return(...) in a method and the return value is dealt
	  with automatically.

Thu Sep 14 18:15:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added new exception OmInvalidDataError for bad data which
	  isn't really an API misuse.

	* Cleaned up the use of silly exceptions in the indexer code.

	* Indexer graph checks the XML source for validity.

	* Modified the DTD to allow list parameters as well as string.

Thu Sep 14 17:33:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Completed implementation of QuartzDbEntries.

Thu Sep 14 17:20:41 BST 2000 Olly Betts

	* Fixed some compiler warnings in stemmer code.
